          provides the OS process name as "CloudI"
        * External service source code switched from gen_fsm to gen_statem
        * Update quickrand
    * Fix OCaml CloudI API usage with Erlang/OTP 20.0
      (Erlang binary term format parsing in OCaml had an atom parsing bug
       for pids and other types that store an atom)

2017-04-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix chroot and directory service configuration options
      validation of absolute paths
    * Add libtool/autoconf version check
    * Fix usage of the owner service configuration option
      when it is used with the chroot service configuration option

2017-04-18 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix Python CloudI API compatibility with Python v3
      (incompatibility was added in CloudI 1.7.0)
    * Add request_rate integration test throughput data for 1.7.1

2017-04-17 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update cpg

2017-04-12 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix validation of chroot and directory service configuration options
      to work properly together and require absolute paths
    * Update cpg

2017-04-10 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add Erlang map type specification usage
    * Update cpg

2017-04-09 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix the chroot service configuration option to change the
      current working directory to / if the directory
      service configuration option was not provided
    * Fix the chroot service configuration option to be done before
      the owner service configuration option is applied
    * Change the nice and limit service configuration options to be
      applied before the owner service configuration option
      (this approach is more consistent with the cgroup
       service configuration option; the user/group executing
       CloudI owns the CloudI external service OS processes and these